@@ -10,6 +10,7 @@ Date: 2025-08-01
     - Added methane and carbon dioxide from atmosphere recipes
   Changes:
     - BREAKING CHANGE: advanced chemical plant now has 6 inputs and outputs instead of 3
+    - Buldings can not not be crafted with productivity
   Bugfixes:
     - Fixed some icons
     - Fixed some tech tree dependancies
